# GameSaverEngine

./: .gitignore  CMakeLists.txt
GameSaver/: CMakeCache.txt  CMakeLists.txt
GameSaver/include/: gs_app.h  gs_device.h  gs_model.h  gs_pipeline.h  gs_swap_chain.h  gs_window.h
GameSaver/shaders/: PixelShader.hlsl  PixelShader.spv  VertexShader.hlsl  VertexShader.spv  compile.bat
GameSaver/src/: gs_app.cpp  gs_device.cpp  gs_model.cpp  gs_pipeline.cpp  gs_swap_chain.cpp  gs_window.cpp  main.cpp
